--- a/contact.css
+++ b/contact.css
@@ -1,105 +1,58 @@
 html, body, ul{
-	margin:0;
-	padding:0;
+  margin:0;
+  padding:0;
 
 }
 
-.topnav {
-  overflow: hidden;
+nav{
   position: fixed;
-
+  background-color: black;
+  top:0;
+  left:0;
+  width: 100%;
+  z-index: 5;
+  padding-top:20px;
 }
 
-.topnav a {
-  float: left;
+ul {
+  float:right;
+  padding: 20px;
+  margin-right:10px;
+  line-height: 50px;
+  list-style-type: none;
+  text-align:right;
+}
+
+ul li{
+  display: inline-block;
+  margin:0 16px;
+}
+
+a {
+  float:left;
   display: block;
-  color: #001011;
+  color: white;
   text-align: center;
-  padding: 14px 16px;
+  width:200px;
+  height:50px;
   text-decoration: none;
   font-size: 17px;
+  background-color: #f4a142;
 
 }
 
-.topnav a:hover {
+a:hover {
   color:black;
   background-color: #f4a142;
 }
 
-.active {
-  background-color: #f4a142;
-  color: white;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
-}
-
-.wrapper {
-	width: 100%;
-	margin: 0 auto;
-	box-sizing: border;
-
-}
-
-
-.left-column {
-	float:left;
-	background-image:url("spicymayobk.jpg");
-	background-size: cover;
-	width: 50%;
-	height: 700px;
-	align-content: center;
-	padding:10px;
-	box-sizing: border-box;
-
-}
-
-img {
-	width: 38px;
-	float:left;
-	padding:20px;
-}
-
-.right-column{
-	float:left;
-	background-color: black;
-	width: 50%;
-	height: 700px;
-	padding:100px;
-	box-sizing: border-box;
-
-}
 
 .footer{
-	clear:both;
-	background-color:#f4a142;
-	height: 100px;
-	text-align: center;
-	padding: 30px;
+  clear:both;
+  background-color:#f4a142;
+  height: 100px;
+  text-align: center;
+  padding: 30px;
 
 }
 
@@ -118,26 +71,89 @@ img {
 }
 
 .fa:hover {
-    background: black;
+    background: white;
+}
+
+.content{
+  position:absolute;
+  padding-right: 50px;
+  top:10%;
+  left:0%;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 
-h1{
-  font-family: avenir;
-	color:white;
-	letter-spacing: 300px,
+h1 {
+color: white;
+text-shadow: 7px 7px 40px #000000;
+text-align: right;
+font-size: 100px;
+
 }
 
-h3{
-	color:#f4a142;
+h3 {
+  color:white;
+  text-align: center;
+  font-size:40px;
 }
 
+h2 {
+  padding-top:20px;
+  padding-left:20px;
+  float:left;
+  color:white;
+  font-size: 20px;
+  text-align: center;
+}
 
 h6{
-	color: #f4a142;
-	text-transform: uppercase;
+  font-family: helvetica;
+  color: white;
+  text-shadow: 4px 4px 4px #000000;
+  font-size: 20px;
 }
 
+@media screen and (max-width: 600px) {
+  nav {
+    position: absolute;
+
+  }
+ul{
+  text-align:center;
+  }
+  }
+
+.wrapper {
+  width: 100%;
+  margin: 0 auto;
+  box-sizing: border;
+
+}
+
+
+.left-column {
+  float:left;
+  background-image:url("spicymayo_bk.jpg");
+  background-size: cover;
+  width: 50%;
+  height: 800px;
+  align-content: center;
+  padding:10px;
+  box-sizing: border-box;
+
+}
+
+
+.right-column{
+  float:left;
+  background-color: #000000;
+  width: 50%;
+  height: 800px;
+  padding:100px;
+  box-sizing: border-box;
+
+}
 /*email form*/
 
 button {
@@ -160,27 +176,4 @@ width: 70%;
 input{
 width: 100%;
 padding:5px;
-}
-
-
-/*mobile response*/
-
-@media all and (max-width: 900px) {
-.left-column{ 
-	display: none;
-}
-.right-column{ 
-	width:100%;
-	padding: 50px;
-	margin-top:125px;
-}
-form{
-width: 100%;
-}
-
-img{
-	margin-left:-10px;
-	margin-top: -15px;
-}
-  
 }
