--- a/group.css
+++ b/group.css
@@ -4,67 +4,56 @@ html, body, ul{
 
 }
 
-.topnav {
-  overflow: hidden;
+nav{
   position: fixed;
-
+  background-color: black;
+  top:0;
+  left:0;
+  width: 100%;
+  z-index: 5;
+  padding-top:20px;
 }
 
-.topnav a {
-  float: left;
+ul {
+  float:right;
+  padding: 20px;
+  margin-right:10px;
+  line-height: 50px;
+  list-style-type: none;
+  text-align:right;
+}
+
+ul li{
+  display: inline-block;
+  margin:0 16px;
+}
+
+a {
+  float:left;
   display: block;
-  color: #001011;
+  color: white;
   text-align: center;
-  padding: 14px 16px;
+  width:200px;
+  height:50px;
   text-decoration: none;
   font-size: 17px;
+  background-color: #f4a142;
 
 }
 
-.topnav a:hover {
+a:hover {
   color:black;
   background-color: #f4a142;
 }
 
-.active {
-  background-color: #f4a142;
-  color: white;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
-}
 
 .hero {
   float:left;
   position: relative;
-  padding-top: 230px;
-  padding-bottom: 230px;
+  margin-top:116px;
+  height:800px;
 	width: 100%;
-  background-image: url("spicymayobk.jpg");
+  background-image: url("spicymayo_bk.jpg");
   background-size: cover;
   z-index: -1;
 
@@ -94,34 +83,55 @@ html, body, ul{
 }
 
 .fa:hover {
-    background: black;
+    background: white;
+}
+
+.content{
+  position:absolute;
+  padding-right: 50px;
+  top:10%;
+  left:0%;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 
-h1{
-  font-family: avenir;
-	color:white;
-	letter-spacing: 300px,
+h1 {
+color: white;
+text-shadow: 7px 7px 40px #000000;
+text-align: right;
+font-size: 100px;
+
 }
 
-/*mobile response*/
-
-@media all and (max-width: 900px) {
-.left-column{ 
-	display: none;
-}
-.right-column{ 
-	width:100%;
-	padding: 50px;
-	margin-top:125px;
-}
-form{
-width: 100%;
+h2 {
+  padding-top:20px;
+  padding-left:20px;
+  float:left;
+  color:white;
+  font-size: 20px;
+  text-align: center;
 }
 
-img{
-	margin-left:-10px;
-	margin-top: -15px;
+p{
+  float:right;
+  font-family: helvetica;
+  color: white;
+  text-shadow: 4px 4px 4px #000000;
+  text-align: center;
+  font-size: 20px;
+  width: 300px;
 }
-  
-}
+
+@media screen and (max-width: 600px) {
+  nav {
+    position: absolute;
+
+  }
+ul{
+  text-align:center;
+  }
+  .hero {
+    margin-top:350px;
+  }
+  }
