--- a/about.css
+++ b/about.css
@@ -1,53 +1,12 @@
 .hero{
   width: 100%;
   height: 550px;
-  margin-top: 116px;
+  margin-top: 90px;
   float: left;
   background-image: url("aboutimage.jpg");
   background-size: cover;
   z-index: -1;
   position: relative;
-}
-
-nav{
-  position: fixed;
-  background-color: black;
-  top:0;
-  left:0;
-  width: 100%;
-  z-index: 5;
-  padding-top:10px;
-}
-
-ul {
-  float:right;
-  padding: 15px;
-  margin-right:10px;
-  line-height: 50px;
-  list-style-type: none;
-  text-align:right;
-}
-
-ul li{
-  display: inline-block;
-  margin:0 16px;
-}
-
-a {
-  float:left;
-  display: block;
-  color: white;
-  text-align: center;
-  width:200px;
-  height:50px;
-  text-decoration: none;
-  font-size: 17px;
-  background-color: #f4a142;
-}
-
-a:hover {
-  color:black;
-  background-color: #f4a142;
 }
 
 .title{
@@ -88,16 +47,26 @@ p{
 
 img {
   border-radius: 50%;
-  width: 15%;
+  width: 150px;
   padding: 10px;
 }
 
-/*.elyssa{
+.container{
+  width: 100%;
+  height: 300px;
+}
+.elyssa{
   float: left;
-  width: 30%;
+  width: 40%;
+  height: 150px;
+  margin-left: 5%;
+  box-sizing: border-box;
 }
 
 .becca{
   float: right;
-  width: 30%;
-}*/
+  height: 150px;
+  margin-right: 5%;
+  width: 40%;
+  box-sizing: border-box;
+}
